# react-native-jsi-boilerplate

./: CONTRIBUTING.md  README.md  package.json  react-native-jsi-boilerplate.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativejsiboilerplate/: JsiBoilerplateModule.java  JsiBoilerplatePackage.java
cpp/: react-native-jsi-boilerplate.cpp  react-native-jsi-boilerplate.h
example/: App.tsx  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/example/: MainApplication.java
example/ios/: Podfile
example/ios/example.xcodeproj/: project.pbxproj
ios/: JsiBoilerplate.h  JsiBoilerplate.mm
ios/JsiBoilerplate.xcodeproj/: project.pbxproj
src/: index.tsx
